# nm-oc

./: .gitignore  .gitlab-ci.yml  AUTHORS  ChangeLog  Makefile.am  NEWS  NetworkManager-openconnect.doap  README  autogen.sh  configure.ac  configure.in  import-strings.sh  network-manager-openconnect.doap  nm-openconnect-service.name.in  openconnect-strings.txt
.obs/: NetworkManager-openconnect.spec  _service  network-manager-openconnect.dsc  network-manager-openconnect.spec  workflows.yml
.obs/debian/: changelog  control  copyright  network-manager-openconnect-gnome.install  network-manager-openconnect.install  network-manager-openconnect.postinst  network-manager-openconnect.postrm  rules
appdata/: network-manager-openconnect.metainfo.xml.in
auth-dialog/: Makefile.am  main.c
gtk4/: nm-openconnect-dialog.ui
po/: LINGUAS  POTFILES.in  POTFILES.skip  as.po  bg.po  bn_IN.po  bs.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  el.po  en_GB.po  en_US.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  gl.po  gu.po  he.po  hr.po  hu.po  id.po  it.po  kn.po  ko.po  lt.po  lv.po  mr.po  nb.po  nl.po  or.po  pa.po  pl.po  pt.po  (+17 more)
properties/: Makefile.am  auth-helpers.c  auth-helpers.h  gresource.xml  nm-openconnect-dialog.ui  nm-openconnect-editor-plugin.c  nm-openconnect-editor.c  nm-openconnect.c
shared/: nm-service-defines.h
shared/nm-utils/: nm-glib.h
src/: Makefile.am  nm-openconnect-csd-service.xml  nm-openconnect-service-csd-wrapper.c  nm-openconnect-service-openconnect-helper.c  nm-openconnect-service.c
